fixed button shrinking when scrollbar

--- a/src/components/principal/principal.css
+++ b/src/components/principal/principal.css
@@ -37,7 +37,7 @@
   grid-gap: 5px;
   width: 100%;
   grid-row: 2 / span 1;
-  height: calc(100vh - 388px);
+  height: calc(100vh - 403px);
   overflow-y: scroll;
   overflow-x: hidden;
 }
